invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_69.src
.IPPcode24
NOT LF@d int@49 string@henlo LF@a